rust/tests/snapshots/help/config__reset.snap
---
source: tests/cli/snapshots.rs
---
Delete all CLI configuration

Usage: vendo config reset [OPTIONS]

Options:
      --profile <name>  Use a specific account profile
  -y, --yes             Skip confirmation prompt
      --debug           Enable verbose request diagnostics
  -h, --help            Print help

Examples:
  $ vendo config reset
  $ vendo config reset --yes
