rust/tests/snapshots/help/config__set.snap
---
source: tests/cli/snapshots.rs
---
Set configuration values

Usage: vendo config set [OPTIONS]

Options:
      --api-key <key>   API key for authentication
      --profile <name>  Use a specific account profile
      --base-url <url>  Base URL for the Vendo API
      --debug           Enable verbose request diagnostics
      --account <id>    Account ID to operate on
  -h, --help            Print help

Examples:
  $ vendo config set --api-key <key>
  $ vendo config set --account <id>
  $ vendo config set --api-key <key> --account <id>
